# iceberg-with-dltHub

./: Makefile  README.md  pyproject.toml
dlt_portable_data_lake_demo/: __init__.py  dlt.yml  dlt_manifest_full.yml
dlt_portable_data_lake_demo/transformations/dbt_get_reports/: dbt_project.yml
dlt_portable_data_lake_demo/transformations/dbt_get_reports/models/: dlt_processed_load_ids.sql  sources.yml
dlt_portable_data_lake_demo/transformations/dbt_get_reports/models/marts/: dim_customers.sql  dim_items.sql  dim_orders.sql  dim_orders__items.sql  dim_stores.sql  dim_supplies.sql
dlt_portable_data_lake_demo/transformations/dbt_get_reports/models/staging/: stg_customers.sql  stg_items.sql  stg_orders.sql  stg_orders__items.sql  stg_products.sql  stg_stores.sql  stg_supplies.sql
lakekeeper_playground/: Dockerfile  README.md  docker-compose.yaml  requirements.txt
lakekeeper_playground/src/: bootstrap.py  create_bucket.py  create_lakekeeper_warehouse.py  main.py  pyiceberg_demo.py
notebooks/: workshop.ipynb
